@@ -1,3 +1,6 @@
+master:
+ - trash-put also accept -vv for enabling debug prints
+
 0.21.4.18:
  - fix bug #166 'trash goes into an infinite loop when trashing files with a long filename'
  - trash-list learnt the `--trash-dir` option
